<resources>
    <string name="app_name">BookTracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_books">Все книги</string>
    <string name="reading_books">Читаю сейчас</string>
    <string name="past_books">Прочитано</string>
    <string name="want_books">Хочу прочитать</string>
    <string name="content_description_img">Изображение книги</string>
    <string name="content_description_img_heart">Сердечко</string>
    <string name="content_description_img_notes">Заметки</string>
    <string name="my_goals">Мои цели</string>
    <string name="for_day">На день</string>
    <string name="for_month">На месяц</string>
    <string name="for_year">На год</string>
    <string name="pages">стр.</string>
    <string name="add">Добавить</string>
    <string name="save">Сохранить</string>
    <string name="del">Удалить</string>
    <string name="year">2024</string>
    <string name="reading">Читать</string>
    <string name="book_name_hint">Название</string>
    <string name="book_author_hint">Автор</string>
    <string name="book_desc_hint">Описание</string>
    <string name="book_all_pages_hint">Общее количество страниц</string>
    <string name="book_read_pages_hint">Количество прочитанных страниц</string>
    <string name="book_img_hint">Ссылка на обложку</string>
    <string name="book_page_add_hint">Количество страниц</string>
    <string name="change_goal">Изменить цели</string>
    <string name="change">Изменить</string>

    <string name="white">Белый</string>
    <string name="sepia">Сепия</string>
    <string name="black">Черный</string>

    <string name="zero_time">00:00</string>

    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="purple">Purple</string>
    <string name="add_an_annotation">Add an annotation</string>
    <string name="delete_highlight_or_annotation">Delete highlight or annotation</string>

    <string name="quotes">Цитаты</string>
    <string name="notes">Заметки</string>
    <string name="create_notes">Ваша заметка</string>
</resources>