<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="viewModel"
            type="com.nastya.booktracker.BooksViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BooksFragment">

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/books_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginEnd="5dp"
                    android:backgroundTint="@color/light_brown"
                    android:text="@string/all_books"

                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="5dp"
                    android:backgroundTint="@color/light_brown"
                    android:text="@string/reading_books" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="5dp"
                    android:backgroundTint="@color/light_brown"
                    android:text="@string/want_books" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="@color/light_brown"
                    android:text="@string/past_books" />

            </LinearLayout>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/books_list"
            android:layout_width="match_parent"
            android:layout_gravity="top"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/horizontalScrollView"
            app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
            app:spanCount="2">

        </androidx.recyclerview.widget.RecyclerView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>