<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp" >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/white_style"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/white"
            android:checkable="true"
            android:textColor="@color/dark_gray"
            app:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sepia_style"
            app:strokeColor="@color/selector_btn_stroke_white"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sepia_style"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/sepia"
            android:textColor="@color/brown"
            app:backgroundTint="@color/sepia"
            android:checkable="true"
            app:layout_constraintStart_toEndOf="@+id/white_style"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/black_style"
            app:strokeColor="@color/selector_btn_stroke_sepia"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/black_style"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/black"
            android:checkable="true"
            android:textColor="@color/gray"
            app:backgroundTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sepia_style"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/selector_btn_stroke_black"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/fontSizeLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Размер шрифта"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/white_style"
            app:layout_constraintTop_toBottomOf="@+id/white_style" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/fontSizeLable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fontSizeLable"
            app:layout_constraintTop_toTopOf="@+id/fontSizeLable"
            app:selectionRequired="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMinus"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="60dp"
                android:layout_height="38dp"
                android:backgroundTint="@color/transparent"
                android:text="-"
                android:textColor="@color/black"
                app:strokeColor="@color/selector_toggle_background" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPlus"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="60dp"
                android:layout_height="38dp"
                android:backgroundTint="@color/transparent"
                android:text="+"
                android:textColor="@color/black"
                app:strokeColor="@color/selector_toggle_background" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
            android:id="@+id/carouselRecyclerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>